# genesis

./: ""  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  GENESIS_HANDOVER.md  GENESIS_V4_CODE_REVIEW.md  GENESIS_V4_MENTAL_MODEL.md  GENESIS_V4_SPEC.md  GENESIS_V5_DESIGN.md  Genesis.desktop  Genesis_zh.desktop  HANDSHAKE_PROTOCOL.md  LEVERAGE_AND_POSITIVE_LOOP.md  META_INFO_RETHINK.md  README.md  UPDATED.txt  V5_HANDOFF.md  VERSION  __init__.py  agent.py  ai_money_maker.py  ai_money_result.txt  auto_money_maker.py  automated_income_system_report.md  automated_money_maker.py  automation_flow_guide.md  autonomous_income_system.md  autopilot.py.bak  autopilot_orig.py  check_deps.py  cli.py  cloudflare_mcp_analysis.md  competition_analysis.md  consultation_report_1.md  course_outline.md  daemon.pid  daily_log.txt  data_monitor_report.md  debug_curl.py  (+61 more)
nanogenesis/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_TOPOLOGY.md  DEPLOYMENT_GUIDE.md  GENESIS_V2_SPEC.md  HOW_TO_UPLOAD.md  MATERIALS_GUIDE.md  README.md  STATUS.md  agent.py  autonomous_potential_roadmap.md  cache_dump.json  capability_audit.py  cli.py  create_emotional_video.sh  create_portable_package.py  daemon.py  data1.json  data2.json  data_pipeline_commercialization_plan.md  data_pipeline_config.json  debug_sys_3.txt  debug_systems.txt  debug_usr_3.txt  demo_evolution.py  demo_full_flow.py  demo_sandbox.py  demo_strategy_feedback.py  deploy_github_actions.sh  deploy_huggingface.sh  deploy_render.sh  deploy_zeabur.sh  diff_agent_payload.py  diff_bytes.py  digital_consciousness_transfer_blueprint.md  discord_bot.py  (+53 more)
(+528 files in other folders)
