[project]
name = "nanogenesis"
version = "0.1.0"
description = "自进化的轻量级智能 Agent - 融合 nanobot + Genesis + OpenClaw"
authors = [{name = "NanoGenesis Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
